# rust-samples

./: .gitignore  compose.yaml  readme.adoc
container/postgres/: Dockerfile  init.sql
kafka-rust/consumer/consumer/: Cargo.toml
kafka-rust/consumer/consumer/src/: main.rs
kafka-rust/producer/producer/: Cargo.toml
kafka-rust/producer/producer/src/: main.rs
todo-auth-rust/: Cargo.toml
todo-auth-rust/http/: http-client.env.json
todo-auth-rust/src/: routes.rs
todo-rust/: Cargo.toml
todo-rust/http/: todo.http
todo-rust/src/: context.rs  main.rs  routes.rs
todo-rust/src/todo/: todo_api.rs  todo_service.rs
